@@ -1,8 +1,10 @@
 package com.github.scribejava.apis.fitbit;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.github.scribejava.core.extractors.OAuth2AccessTokenJsonExtractor;
 import com.github.scribejava.core.model.OAuth2AccessTokenErrorResponse;
+import com.github.scribejava.core.model.Response;
 import com.github.scribejava.core.oauth2.OAuth2Error;
 import java.io.IOException;
 
@@ -31,18 +33,23 @@ public class FitBitJsonTokenExtractor extends OAuth2AccessTokenJsonExtractor {
      * Related documentation: https://dev.fitbit.com/build/reference/web-api/oauth2/
      */
     @Override
-    public void generateError(String rawResponse) throws IOException {
-        final JsonNode errorNode = OAuth2AccessTokenJsonExtractor.OBJECT_MAPPER.readTree(rawResponse)
-                .get("errors").get(0);
+    public void generateError(Response response) throws IOException {
+        final JsonNode errorNode;
+        try {
+            errorNode = OAuth2AccessTokenJsonExtractor.OBJECT_MAPPER.readTree(response.getBody()).get("errors").get(0);
+        } catch (JsonProcessingException ex) {
+            throw new OAuth2AccessTokenErrorResponse(null, null, null, response);
+        }
 
         OAuth2Error errorCode;
         try {
-            errorCode = OAuth2Error.parseFrom(extractRequiredParameter(errorNode, "errorType", rawResponse).asText());
+            errorCode = OAuth2Error
+                    .parseFrom(extractRequiredParameter(errorNode, "errorType", response.getBody()).asText());
         } catch (IllegalArgumentException iaE) {
             //non oauth standard error code
             errorCode = null;
         }
 
-        throw new OAuth2AccessTokenErrorResponse(errorCode, errorNode.get("message").asText(), null, rawResponse);
+        throw new OAuth2AccessTokenErrorResponse(errorCode, errorNode.get("message").asText(), null, response);
     }
 }
