@@ -1,5 +1,6 @@
 package com.github.scribejava.core.extractors;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import java.io.IOException;
 import java.net.URI;
@@ -33,21 +34,39 @@ public class OAuth2AccessTokenJsonExtractor extends AbstractJsonExtractor implem
         Preconditions.checkEmptyString(body, "Response body is incorrect. Can't extract a token from an empty string");
 
         if (response.getCode() != 200) {
-            generateError(body);
+            generateError(response);
         }
         return createToken(body);
     }
 
     /**
+     *
+     * @param rawResponse rawResponse
+     * @throws java.io.IOException IOException
+     * @deprecated use {@link #generateError(com.github.scribejava.core.model.Response) }
+     */
+    @Deprecated
+    public void generateError(String rawResponse) throws IOException {
+        generateError(new Response(-1, null, null, rawResponse));
+    }
+
+    /**
      * Related documentation: https://tools.ietf.org/html/rfc6749#section-5.2
      *
-     * @param rawResponse response
-     * @throws IOException IOException
+     * @param response response
+     * @throws java.io.IOException IOException
+     *
      */
-    public void generateError(String rawResponse) throws IOException {
-        final JsonNode response = OBJECT_MAPPER.readTree(rawResponse);
+    public void generateError(Response response) throws IOException {
+        final String responseBody = response.getBody();
+        final JsonNode responseBodyJson;
+        try {
+            responseBodyJson = OBJECT_MAPPER.readTree(responseBody);
+        } catch (JsonProcessingException ex) {
+            throw new OAuth2AccessTokenErrorResponse(null, null, null, response);
+        }
 
-        final JsonNode errorUriInString = response.get("error_uri");
+        final JsonNode errorUriInString = responseBodyJson.get("error_uri");
         URI errorUri;
         try {
             errorUri = errorUriInString == null ? null : URI.create(errorUriInString.asText());
@@ -57,16 +76,17 @@ public class OAuth2AccessTokenJsonExtractor extends AbstractJsonExtractor implem
 
         OAuth2Error errorCode;
         try {
-            errorCode = OAuth2Error.parseFrom(extractRequiredParameter(response, "error", rawResponse).asText());
+            errorCode = OAuth2Error
+                    .parseFrom(extractRequiredParameter(responseBodyJson, "error", responseBody).asText());
         } catch (IllegalArgumentException iaE) {
             //non oauth standard error code
             errorCode = null;
         }
 
-        final JsonNode errorDescription = response.get("error_description");
+        final JsonNode errorDescription = responseBodyJson.get("error_description");
 
         throw new OAuth2AccessTokenErrorResponse(errorCode, errorDescription == null ? null : errorDescription.asText(),
-                errorUri, rawResponse);
+                errorUri, response);
     }
 
     private OAuth2AccessToken createToken(String rawResponse) throws IOException {
