@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * add raw Response (with HTTP repsponse code and body) as member to the OAuth2AccessTokenErrorResponse
+
 [8.0.0]
  * add Kakao API (https://kakao.com/) (thanks to https://github.com/v0o0v)
  * support chunks in JDKHttpClient's Multipart (thanks to https://github.com/eos1d3)
